PRESIDECMS-52 ensure that broader table spacing does not effect sub tables

--- a/system/assets/css/admin/core/preside_datatables_overrides.less
+++ b/system/assets/css/admin/core/preside_datatables_overrides.less
@@ -190,8 +190,8 @@
 	}
 
 	&.table-admin-view-record {
-		tr > {
-			td, th {
+		> tbody > tr {
+			> td, > th {
 				padding-top    : 12px;
 				padding-bottom : 12px;
 			}
